<resources>
    <string name="app_name">Homework21_TMS</string>
    <string name="game_of_thrones">Рыцари, мертвецы и драконы — в эпической битве за судьбы мира. Сериал, который навсегда изменил телевидение</string>
    <string name="over_the_garden_wall">В центре событий находятся два брата: Грег и Вирт. Им предстоит путешествие через таинственный и страшный лес, и только пройдя его, они смогут попасть домой</string>
    <string name="cast_away">Сотрудник почтовой службы учится выживать на острове посреди океана. Современная робинзонада с Томом Хэнксом</string>
    <string name="city">Главный герой — 29-летний мангака Сатору Фудзинума. Каждый раз, когда рядом с ним случается происшествие, его сознание непроизвольно возвращается назад на несколько минут, что позволяет ему оглядеться и исправить ситуацию. Но однажды убивают его мать, и Сатору понимает, что это как-то связано со случаями похищения и убийства детей, происходившими вокруг него в детстве. Его способность отправляет его назад на 18 лет.
Сохранив все воспоминания взрослого, Сатору оказывается в теле себя десятилетнего и решает найти убийцу детей, чтобы предотвратить и убийство матери в том числе. Ключом к исправлению цепи событий он считает похищение и убийство его одноклассницы Каё Хинадзуки.</string>
    <string name="the_talented_mr_ripley">Бедный молодой человек с даром мимикрии присваивает чужую личность. Психологический триллер с Мэттом Дэймоном</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="next_page">next page</string>
    <string name="please_enter_you_login_and_password">Please enter you login and password</string>
    <string name="welcom_on_first_fragment">Welcom on first fragment</string>
    <string name="here_must_be_descriptions">Here must be descriptions</string>
    <string name="cant_emtry">Field can\'t be empty</string>
    <string name="iv_clicked">ImageView clicked</string>
    <string name="msg">just a message</string>
    <string name="logout">Logout</string>
    <string name="home_fragment">Home fragment</string>
    <string name="go_to_retrofit_fragment">Go to Retrofit Fragment</string>
    <string name="go_to_items_fragment">Go to Items Fragment</string>

</resources>